# pydmp

./: README.md  pyproject.toml
src/pydmp/: __init__.py  __main__.py
